Patient record structure, update consultation and appointments structure, facility structure
